docs: update contact emails to aedia@aedia.es and info@aedia.com

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "AEDIA", email = "info@aedia.com"}
+    {name = "AEDIA", email = "aedia@aedia.es"}
 ]
 keywords = ["toon", "json", "llm", "tokenization", "ai", "benchmark", "streaming"]
 classifiers = [
